opdr14/solution/run-as.yaml
apiVersion: v1
kind: Pod
metadata:
  name: run-as
spec:
  securityContext:
    runAsUser: 1000
    runAsGroup: 3000
    fsGroup: 2000
  volumes:
  - name: run-as-vol
    emptyDir: {}
  containers:
  - name: run-as
    image: busybox
    command: [ "sh", "-c", "sleep 1h" ]
    volumeMounts:
    - name: run-as-vol
      mountPath: /data/demo
    securityContext:
      allowPrivilegeEscalation: false
